# PlayerDemo

./: .gitignore  README.md  build.gradle  settings.gradle
MediaScanner/: build.gradle  platform.keystore
MediaScanner/src/androidTest/java/com/app/scanner/: ExampleInstrumentedTest.java
MediaScanner/src/main/: AndroidManifest.xml
MediaScanner/src/main/java/com/app/scanner/: BaseDevice.java  CarApp.java  DeviceManager.java  DeviceTypeEnum.java  MainActivity.java  MainActivity.kt  ScannerService.java  TestJniMainAct.java
MediaScanner/src/main/java/com/app/scanner/db/: AlbumVo.java  AudioDbHelper.java  AudioVo.java  Constants.java  DaoManager.java  DatabaseContext.java  DbOperationHelper.java  DeviceDbHelper.java  FolderDbHelper.java  FolderVo.java  (+8 more)
MediaScanner/src/main/res/layout/: activity_main_jni_test.xml  activity_main_layout.xml
MediaScanner/src/main/res/raw/: config.json
MediaScanner/src/main/res/values/: strings.xml  themes.xml
MediaService/: build.gradle
MediaService/src/androidTest/java/com/landmark/media/: ExampleInstrumentedTest.kt
MediaService/src/main/: AndroidManifest.xml
MediaService/src/main/java/com/landmark/media/: MainActivity.java  PlayActivity.java
MediaService/src/main/res/drawable/: ic_baseline_accessibility_new_24.xml  ic_baseline_album_24.xml  ic_baseline_folder_24.xml  ic_baseline_music_note_24.xml  ic_baseline_ondemand_video_24.xml  ic_baseline_queue_music_24.xml
MediaService/src/main/res/layout/: activity_collect_history.xml  activity_home.xml  activity_main.xml  activity_play.xml  activity_search.xml  item.xml  item_album.xml  item_folder.xml  item_genre.xml  item_history.xml  item_music.xml  item_video.xml  itema_artist.xml
MediaService/src/test/java/com/landmark/media/: ExampleUnitTest.kt
ScannerNative/: CMakeLists.txt  build.gradle
ScannerNative/src/androidTest/java/com/landmark/scannernative/: ExampleInstrumentedTest.java
ScannerNative/src/main/: AndroidManifest.xml
ScannerNative/src/main/cpp/: CMakeLists.txt
ScannerNative/src/main/cpp/3part/ffmpeg/: ffmpeg.h
ScannerNative/src/main/cpp/3part/ffmpeg/include/libavutil/: ffversion.h
ScannerNative/src/main/cpp/android/: native_lib.cpp
ScannerNative/src/main/cpp/example/: CMakeLists.txt  example.cpp  example_config.cpp  example_retriever.cpp  example_travel.cpp
ScannerNative/src/main/cpp/mediascan/: CMakeLists.txt  CMakeLists2.txt
ScannerNative/src/main/cpp/mediascan/include/: AData.h  BFSTravel.h  FileInfo.h  MediaMetadataRetriever.h  MediaRetrieverManager.h  MediaScanConfig.h  MediaScanner.h  MediaScannerManager.h  MediaStatus.h  ThreadPool.h  native_lib.h
ScannerNative/src/main/cpp/mediascan/src/: AData.cpp  BFSTravel.cpp  FileInfo.cpp  MediaMetadataRetriever.cpp  MediaRetrieverManager.cpp  MediaScanConfig.cpp  MediaScanner.cpp  MediaScannerManager.cpp  native_lib.cpp  native_lib_temp2.bak
ScannerNative/src/main/cpp/utils/: Log.h  Logger.cpp  Logger.h  Now.h  SingleTon.h  StringUtils.cpp  StringUtils.h
ScannerNative/src/main/java/com/landmark/scannernative/: MediaInfoVo.java  ScannerJni.java  Test.java
ScannerNative/src/test/java/com/landmark/scannernative/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+93 files in other folders)
